--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,13 @@
     "next": "14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.4.0"
+    "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13"
   }
 }
